--- a/test/graphchi_metrics.html
+++ b/test/graphchi_metrics.html
@@ -34,23 +34,23 @@ table {  border: 1px solid #999999; font: normal 80%/140% arial, helvetica, sans
 
 <p><table><tr><th>Key</th><th>Value (sec)</th><th>Count</th><th>Min (sec)</th><th>Max (sec)</th><th>Average (sec)</th></tr>
 <tr><td>execute-updates</td>
-<td>0.013948</td>
+<td>0.016865</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>iomgr_init</td>
-<td>0.000279</td>
+<td>0.000256</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>memoryshard_create_edges</td>
-<td>0.002551</td>
+<td>0.002617</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>preada_now</td>
-<td>0.000390</td>
+<td>0.001152</td>
 <td>3</td>
 <td>0.000</td>
-<td>0.000</td>
+<td>0.001</td>
 <td>0.000</td>
 </tr><tr><td>runtime</td>
-<td>0.076546</td>
+<td>0.080194</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>stripedio_wait_for_reads</td>
-<td>0.040341</td>
+<td>0.040336</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>stripedio_wait_for_writes</td>
-<td>0.000008</td>
+<td>0.000006</td>
 <td>3</td>
 <td>0.000</td>
 <td>0.000</td>
@@ -60,7 +60,7 @@ table {  border: 1px solid #999999; font: normal 80%/140% arial, helvetica, sans
 <p><table><tr><th>Key</th><th>Value</th></tr>
 <tr><td>app</td><td width=400>matrix_multiply</td>
 </tr><tr><td>engine</td><td width=400>default</td>
-</tr><tr><td>file</td><td width=400>src/phoenix/X.txt</td>
+</tr><tr><td>file</td><td width=400>X.txt</td>
 </tr></table> </p><!-- Round 3 -->
 
 <p> </p></body></html>
