--- a/testHybird/graphchi_metrics.html
+++ b/testHybird/graphchi_metrics.html
@@ -19,56 +19,38 @@ table {  border: 1px solid #999999; font: normal 80%/140% arial, helvetica, sans
 <td colspan=4>&nbsp;</td></tr><tr><td>nshards</td>
 <td>1</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>nvertices</td>
-<td>11</td>
+<td>10001</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>scheduler</td>
 <td>0</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>serialized-updates</td>
-<td>10.000000</td>
+<td>10001.000000</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>stripesize</td>
 <td>1073741824</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>updates</td>
-<td>11</td>
+<td>10001</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>work</td>
-<td>9</td>
+<td>12299543</td>
 <td colspan=4>&nbsp;</td></tr></table> </p><!-- Round 1 -->
 
 <p><table><tr><th>Key</th><th>Value (sec)</th><th>Count</th><th>Min (sec)</th><th>Max (sec)</th><th>Average (sec)</th></tr>
 <tr><td>execute-updates</td>
-<<<<<<< HEAD
-<td>0.001012</td>
+<td>0.556632</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>iomgr_init</td>
-<td>0.000130</td>
+<td>0.000654</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>memoryshard_create_edges</td>
-<td>0.000175</td>
+<td>0.388561</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>preada_now</td>
-<td>0.000182</td>
-=======
-<td>0.000569</td>
-<td colspan=4>&nbsp;</td></tr><tr><td>iomgr_init</td>
-<td>0.000195</td>
-<td colspan=4>&nbsp;</td></tr><tr><td>memoryshard_create_edges</td>
-<td>0.000111</td>
-<td colspan=4>&nbsp;</td></tr><tr><td>preada_now</td>
-<td>0.000028</td>
->>>>>>> a2859efc44ed72e9c5c309fc956aa6a837bf695e
-<td>3</td>
+<td>0.068108</td>
+<td>5</td>
 <td>0.000</td>
-<td>0.000</td>
-<td>0.000</td>
+<td>0.023</td>
+<td>0.014</td>
 </tr><tr><td>runtime</td>
-<<<<<<< HEAD
-<td>0.057899</td>
+<td>0.996278</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>stripedio_wait_for_reads</td>
-<td>0.054593</td>
+<td>0.000002</td>
 <td colspan=4>&nbsp;</td></tr><tr><td>stripedio_wait_for_writes</td>
-<td>0.000004</td>
-=======
-<td>0.056928</td>
-<td colspan=4>&nbsp;</td></tr><tr><td>stripedio_wait_for_reads</td>
-<td>0.050436</td>
-<td colspan=4>&nbsp;</td></tr><tr><td>stripedio_wait_for_writes</td>
-<td>0.000003</td>
->>>>>>> a2859efc44ed72e9c5c309fc956aa6a837bf695e
+<td>0.000010</td>
 <td>3</td>
 <td>0.000</td>
 <td>0.000</td>
@@ -78,7 +60,7 @@ table {  border: 1px solid #999999; font: normal 80%/140% arial, helvetica, sans
 <p><table><tr><th>Key</th><th>Value</th></tr>
 <tr><td>app</td><td width=400>matrix_multiply</td>
 </tr><tr><td>engine</td><td width=400>default</td>
-</tr><tr><td>file</td><td width=400>X.txt</td>
+</tr><tr><td>file</td><td width=400>x.txt</td>
 </tr></table> </p><!-- Round 3 -->
 
 <p> </p></body></html>
